--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,30 +6,50 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: Build and Deploy to Maven
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches:
+      - main
 
 jobs:
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    # Step 1: Checkout the code
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    # Step 2: Set up JDK
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    # Step 3: Cache Maven dependencies
+    - name: Cache Maven dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+
+    # Step 4: Build the project with Maven
+    - name: Build with Maven
+      run: mvn clean install
+
+    # Step 5: Deploy to Maven repository
+    - name: Deploy to Maven Repository
+      # env:
+      #   MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }} # Add this secret in your repository settings
+      #   MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }} # Add this secret in your repository settings
+      run: mvn deploy -DskipTests=true
+
+    # Optional: Post-deployment notification
+    - name: Notify Success
+      if: success()
+      run: echo "Build and deployment to Maven repository completed successfully."
